@@ -34,9 +34,8 @@ import org.apache.commons.jexl3.JexlEngine;
 import org.apache.commons.jexl3.JexlException;
 import org.apache.commons.jexl3.JexlExpression;
 import org.apache.commons.jexl3.MapContext;
+import org.apache.commons.jexl3.introspection.JexlPermissions;
 import org.apache.commons.lang3.StringUtils;
-
-import com.google.common.collect.ImmutableMap;
 
 import io.wcm.devops.conga.generator.GeneratorException;
 import io.wcm.devops.conga.model.util.MapMerger;
@@ -50,13 +49,14 @@ final class JexlResolver {
   private final JexlEngine jexl;
   private final VariableMapResolver variableMapResolver;
 
-  private static final Map<String, Object> JEXL_FUNCTION_NS = ImmutableMap.of(
+  private static final Map<String, Object> JEXL_FUNCTION_NS = Map.of(
       "stringUtils", StringUtils.class);
 
   JexlResolver(VariableMapResolver variableMapResolver) {
     this.jexl = new JexlBuilder()
         .cache(CACHE_SIZE)
         .namespaces(JEXL_FUNCTION_NS)
+        .permissions(JexlPermissions.UNRESTRICTED)
         .create();
     this.variableMapResolver = variableMapResolver;
   }
